--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,8 +7,8 @@ version: 2
 # Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-22.04
-#   tools:
-#     python: "3.9"
+  tools:
+    python: "3.10"
    
 
 # Build documentation in the "docs/" directory with Sphinx
